docs/v0.0.0/_sources/gallery/workflow.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/workflow.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_workflow.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_workflow.py:


Workflow example
----------------

Docstring for PackLab.docs.examples.workflow

.. GENERATED FROM PYTHON SOURCE LINES 7-42



.. image-sg:: /gallery/images/sphx_glr_workflow_001.png
   :alt: 2D slice at z≈1.50, thickness 0.24 | showing 179 spheres
   :srcset: /gallery/images/sphx_glr_workflow_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /opt/hostedtoolcache/Python/3.11.14/x64/lib/python3.11/site-packages/MPSPlots/helper.py:77: UserWarning: Glyph 8776 (\N{ALMOST EQUAL TO}) missing from font(s) cmr10.
      figure.tight_layout()

    <Figure size 800x500 with 1 Axes>





|

.. code-block:: Python




    from PackLab import Domain, Options

    from PackLab import Simulator, UniformRadiusSampler


    domain = Domain(
        length_x=3.0,
        length_y=3.0,
        length_z=3.0,
        use_periodic_boundaries=True
    )

    radius_sampler = UniformRadiusSampler(minimum_radius=0.1, maximum_radius=0.1)

    options = Options()
    options.random_seed = 123
    options.maximum_attempts = 1500_000
    options.maximum_consecutive_rejections = 50_000
    options.target_packing_fraction = 0.80
    options.minimum_center_separation_addition = 0.0


    rsa_simulator = Simulator(
        domain=domain,
        radius_sampler=radius_sampler,
        options=options
    )

    result = rsa_simulator.run()

    result.statistics.print()

    result.plot_slice_2d()

.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.926 seconds)


.. _sphx_glr_download_gallery_workflow.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: workflow.ipynb <workflow.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: workflow.py <workflow.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: workflow.zip <workflow.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
