docs/v0.0.1/_sources/gallery/workflow.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/workflow.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_workflow.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_workflow.py:


A full workflow example with PackLab
====================================

This example shows the complete workflow of using PackLab to perform a
Random Sequential Addition (RSA) simulation in three dimensions.

It demonstrates the following steps:

1. Create a simulation domain
2. Define a radius sampler for particle sizes
3. Configure simulation options
4. Construct and run the RSA simulator
5. Access the simulation statistics
6. Visualize the resulting configuration and pair correlation function

This is the recommended starting point when learning how to use PackLab.

.. GENERATED FROM PYTHON SOURCE LINES 21-25

Simulation domain
-----------------
The domain defines the physical volume of the simulation.
Here we use periodic boundary conditions on a cubic box.

.. GENERATED FROM PYTHON SOURCE LINES 25-35

.. code-block:: Python


    from PackLab import Domain, Options, Simulator, UniformRadiusSampler

    domain = Domain(
        length_x=6.0,
        length_y=6.0,
        length_z=6.0,
        use_periodic_boundaries=True
    )








.. GENERATED FROM PYTHON SOURCE LINES 36-39

Radius sampler
--------------
All spheres will have radius 0.2 in this example.

.. GENERATED FROM PYTHON SOURCE LINES 39-45

.. code-block:: Python


    radius_sampler = UniformRadiusSampler(
        minimum_radius=0.15,
        maximum_radius=0.15
    )








.. GENERATED FROM PYTHON SOURCE LINES 46-49

Simulation options
------------------
These control the stochastic behaviour of the RSA algorithm.

.. GENERATED FROM PYTHON SOURCE LINES 49-57

.. code-block:: Python


    options = Options()
    options.random_seed = 123
    options.maximum_attempts = 2_500_000
    options.maximum_consecutive_rejections = 50_000
    options.target_packing_fraction = 0.50
    options.minimum_center_separation_addition = 0.0








.. GENERATED FROM PYTHON SOURCE LINES 58-61

Run the simulator
-----------------
Construct the simulator and run the RSA process.

.. GENERATED FROM PYTHON SOURCE LINES 61-70

.. code-block:: Python


    rsa_simulator = Simulator(
        domain=domain,
        radius_sampler=radius_sampler,
        options=options
    )

    result = rsa_simulator.run()








.. GENERATED FROM PYTHON SOURCE LINES 71-75

Print statistics
----------------
The statistics object reports attempts, accepted insertions,
packing fraction and other useful diagnostic information.

.. GENERATED FROM PYTHON SOURCE LINES 75-78

.. code-block:: Python


    result.statistics.print()








.. GENERATED FROM PYTHON SOURCE LINES 79-82

Plot a 2D slice of the configuration
------------------------------------
This provides a visual view of the spatial arrangement of spheres.

.. GENERATED FROM PYTHON SOURCE LINES 82-90

.. code-block:: Python


    result.plot_slice_2d(
        slice_axis="z",
        slice_center_fraction=0.5,
        slice_thickness_fraction=0.08,
        maximum_circles_in_slice=2500,
    )




.. image-sg:: /gallery/images/sphx_glr_workflow_001.png
   :alt: 2D slice at z≈3.00, thickness 0.48 | showing 415 spheres
   :srcset: /gallery/images/sphx_glr_workflow_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /opt/hostedtoolcache/Python/3.11.14/x64/lib/python3.11/site-packages/MPSPlots/helper.py:77: UserWarning: Glyph 8776 (\N{ALMOST EQUAL TO}) missing from font(s) cmr10.
      figure.tight_layout()

    <Figure size 800x500 with 1 Axes>



.. GENERATED FROM PYTHON SOURCE LINES 91-95

Pair correlation function
-------------------------
We finally compute and plot the pair correlation function g(r)
using Monte Carlo sampling of particle pairs.

.. GENERATED FROM PYTHON SOURCE LINES 95-100

.. code-block:: Python


    result.plot_pair_correlation(
        pair_correlation_bins=300,
        maximum_number_of_pairs=20_000_000
    )



.. image-sg:: /gallery/images/sphx_glr_workflow_002.png
   :alt: Pair correlation function (minimum image)
   :srcset: /gallery/images/sphx_glr_workflow_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 800x500 with 1 Axes>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 4.011 seconds)


.. _sphx_glr_download_gallery_workflow.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: workflow.ipynb <workflow.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: workflow.py <workflow.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: workflow.zip <workflow.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
